[package]
name = "union-only"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = "4.0.0-pre.0"
merlin = "3.0.0"
rand = "0.8.4"
#sha3 = "0.9.1"
sha2 = "0.10.2"
bytes = "1.0.1"
rayon = "1.5.1"
structopt = "0.3.22"
indicatif = "0.17.0-beta.1"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "timings"
harness = false